GNOME Bugzilla – Bug 693251
wayland: fix the direction of scrolling
Last modified: 2013-02-06 16:58:05 UTC
Fix the direction of scrolling and convert the delta values into the expected range.
Created attachment 235300 [details] [review] wayland: fix the direction of scrolling Fix the direction of scrolling and convert the delta values into the expected range.
Review of attachment 235300 [details] [review]: LGTM.
Attachment 235300 [details] pushed as 69ac91b - wayland: fix the direction of scrolling